--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- ICS2O-UnitX-YY-HTML -->
+<!-- ICS20-Unit2-04-JS -->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="XXX">
+    <meta name="description" content="Calculating area of a triangle">
     <meta name="keywords" content="mths, ics2o">
     <meta name="author" content="Marshall">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +11,48 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <title>XXX</title>
+    <title>Area of a triangle</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-teal.min.css" />
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-   
+    <script src="./js/script.js"></script>
+    <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class = "mdl-layout__header">
+        <div class = "mdl-layout__header-row">      
+          <span class = "mdl-layout-title">Calculating the area of a triangle</span>
+        </div>       
+      </header>
+      <main class = "mdl-layout__content">
+        <img src="./images/triangle.png" alt="rectangle" width="25%" height="auto" />
+        <!-- basic text -->
+        <p>Input the base and height to calculate the area of the triangle!<br>Formula: a = (b x h) ÷ 2</p>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base-of-triangle">
+            <label class="mdl-textfield__label" for="base-of-triangle">Input base</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="height-of-triangle">
+            <label class="mdl-textfield__label" for="height-of-triangle">Input height</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Colored raised button -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="calculate()">
+          Calculate
+        </button>
+        <div id="answer">
+          <div id="area"></div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
